# basic_goal_planning

./: .gitignore  CMakeLists.txt  README.md  dataset.txt  package.xml  setup.py
src/: babbling.py  dataset.txt  run_planning.py  test_service_node.py
src/services/: run_predef_traj_service.py
srv/: ExecPredefTraj.srv
